Fixed issue where grid would shift Changed from floats to inline-block

--- a/stylesheets/components/_pricing.sass
+++ b/stylesheets/components/_pricing.sass
@@ -4,7 +4,7 @@
 
 .price
     font-family: $heading-family
-
+    text-decoration: none
     color: $color-apple-blossom
     margin-right: $spacing / 2
 
